<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/white_back"
                android:contentDescription="@string/back"
                android:focusable="true" />

            <TextView
                android:id="@+id/Title"
                android:layout_width="267dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="16dp"
                android:foregroundGravity="center"
                android:text="@string/create_you_own_recipe"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="195dp"
                android:layout_height="173dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:foregroundGravity="center"
                app:srcCompat="@mipmap/ic_launcher_cooking_round"
                android:contentDescription="@string/cooking_image" />

            <EditText
                android:id="@+id/RecipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/recipe_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/description"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:foregroundGravity="center"
                android:hint="@string/image_url"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/inputSteps"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/recipe_instructions"
                android:inputType="textMultiLine"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="199dp"
                android:layout_height="47dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#008578"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>